# Block-Builder

./: .gitignore  Block.cpp  Block.h  BlockSelector.cpp  BlockSelector.h  CMakeLists.txt  Camera.cpp  Camera.h  Cube.cpp  Cube.h  Cube3Face.cpp  Cube3Face.h  Cube4Face.cpp  Cube4Face.h  CubeIdenticalFace.cpp  CubeIdenticalFace.h  ElementBufferObject.cpp  ElementBufferObject.h  README.md  Rect2D.h  ScreenObject.cpp  ScreenObject.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  ThreeDVec.cpp  ThreeDVec.h  VertexArray.cpp  VertexArray.h  VertexShader.shader  World.cpp  World.h  main.cpp  test.cpp
glad/include/glad/: glad.h
glad/src/: glad.c
glfw/: README.md
glm/: CMakeLists.txt
lib/glad/include/glad/: glad.h
shaders/: BasicColorVertexFragShader.shader  BasicTextureFShader.glsl  BasicTextureVShader.glsl
src/: Block.cpp  Camera.h  Cube4Face.cpp  Cube4Face.h  CubeIdenticalFace.cpp  InitWindow.cpp  Rect2D.cpp  Rect2D.h  ScreenObject.cpp  ScreenObject.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  ThreeDVec.cpp  ThreeDVec.h  VertexArray.cpp  World.cpp  World.h  main.cpp
stb/: stb_image.cpp  stb_image.h
